--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 
 [versioneer]
 VCS = git
-style = pep440
+style = pep440-dev
 versionfile_source = diaboli_mundi_back/_version.py
 versionfile_build = diaboli_mundi_back/_version.py
 tag_prefix =
