--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -26,7 +26,7 @@ jobs:
           python setup.py bdist_wheel --skip-build
       - name: Set the image tag
         run: |
-          echo "IMAGE_TAG=$(python -c "import versioneer; print(versioneer.get_version())") >> $GITHUB_ENV
+          echo "IMAGE_TAG=$(python -c 'import versioneer; print(versioneer.get_version())')" >> $GITHUB_ENV
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
