--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -15,15 +15,7 @@ jobs:
       - name:  build pkg
         run: |
           rm -rf dist
-          find . -name "*.c" | xargs rm -f
-          find . -name "*.so" | xargs rm -f
-          rm -rf *.egg-info build
-          python setup.py build
-          find ./build/lib* -name "*.so" | sed "s/cpython.*\$/py/g" | xargs rm -f
-          find ./build/lib* -name "*.so" | sed 's/cpython.*\$/pyx/g' | xargs rm -f
-          find ./build/lib* -name "*.so" | sed 's/cpython.*\$/c/g' | xargs rm -f
-          echo "Start building wheel"
-          python setup.py bdist_wheel --skip-build
+          python setup.py sdist
       - name: Set the image tag
         run: |
           echo "IMAGE_TAG=$(python -c 'import versioneer; print(versioneer.get_version())')" >> $GITHUB_ENV
