--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -16,6 +16,8 @@ jobs:
         run: |
           rm -rf dist
           python setup.py sdist
+      - name: ls
+        run: ls -al
       - name: Set the image tag
         run: |
           echo "IMAGE_TAG=$(python -c 'import versioneer; print(versioneer.get_version())')" >> $GITHUB_ENV
