--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -25,7 +25,7 @@ jobs:
           echo "Start building wheel"
           python setup.py bdist_wheel --skip-build
       - name: ls
-        run: ls -al
+        run: ls -al dist
       - name: Set the image tag
         run: |
           echo "IMAGE_TAG=$(python -c 'import versioneer; print(versioneer.get_version())')" >> $GITHUB_ENV
