--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -17,20 +17,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name:  build pkg
-        run: |
-          rm -rf dist
-          find . -name "*.c" | xargs rm -f
-          find . -name "*.so" | xargs rm -f
-          rm -rf *.egg-info build
-          python setup.py build
-          find ./build/lib* -name "*.so" | sed "s/cpython.*\$/py/g" | xargs rm -f
-          find ./build/lib* -name "*.so" | sed 's/cpython.*\$/pyx/g' | xargs rm -f
-          find ./build/lib* -name "*.so" | sed 's/cpython.*\$/c/g' | xargs rm -f
-          echo "Start building wheel"
-          python setup.py bdist_wheel --skip-build
-      - name: ls
-        run: ls -al dist
+        run: ls -al
       - name: Set the image tag
         run: |
           echo "IMAGE_TAG=$(python -c 'import versioneer; print(versioneer.get_version())')" >> $GITHUB_ENV
