--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -10,17 +10,18 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: ls
+        run: ls -al
+      - name: Set the image tag
+        run: |
+          echo "IMAGE_TAG=$(python -c 'import versioneer; print(versioneer.get_version())')" >> $GITHUB_ENV
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Check out the repo
-        uses: actions/checkout@v2
-        run: ls -al
-      - name: Set the image tag
-        run: |
-          echo "IMAGE_TAG=$(python -c 'import versioneer; print(versioneer.get_version())')" >> $GITHUB_ENV
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
